tests/fixtures/guardrails/invalid/route-namespace-member-reference-export/app/routes/products.ts
import * as productsService from "~/app/services/health.server";

export const loader = productsService.loadHealthCheck;
